--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <!--Section 1: Header (Start)-->
+    <!--Section 1: Header (Start)
     <header>
         <div class="headercontainer">
             <div class="item1">Drop Down</div>
@@ -15,45 +16,31 @@
             <div class="item3">Search Bar</div>     
         </div>
     </header>
-    <!--Section 1: Header (End)-->
+    Section 1: Header (End)-->
     <!--Section 2: Body(1) (Start)-->
-    <div class="bodycontainer">
-        <div class="calculator">
-            <forms>
-                <div>
-                    <input type="text" name="display">
-                </div>
-                <div>
-                    <input type="button" value="AC">
-                    <input type="button" value="DE">
-                    <input type="button" value=".">
-                    <input type="button" value="/">
-                </div>
-                <div>
-                    <input type="button" value="7">
-                    <input type="button" value="8">
-                    <input type="button" value="9">
-                    <input type="button" value="*">
-                </div>
-                <div>
-                    <input type="button" value="4">
-                    <input type="button" value="5">
-                    <input type="button" value="6">
-                    <input type="button" value="-">
-                </div>
-                <div>
-                    <input type="button" value="1">
-                    <input type="button" value="2">
-                    <input type="button" value="3">
-                    <input type="button" value="+">
-                </div>
-                <div>
-                    <input type="button" value="00">
-                    <input type="button" value="0">
-                    <input type="button" value="=">
-                </div>
-            </forms>
+    <div class="calculator-grid">
+        <div class="output">
+            <div data-previous-operand class="previous-operand"></div>
+            <div data-current-operand class="current-operand"></div>
         </div>
+        <button data-all-clear class="span-two">AC</button>
+        <button data-delete>DEL</button>
+        <button data-operation>/</button>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
+        <button data-operation>*</button>
+        <button data-number>4</button>
+        <button data-number>5</button>
+        <button data-number>6</button>
+        <button data-operation>+</button>
+        <button data-number>7</button>
+        <button data-number>8</button>
+        <button data-number>9</button>
+        <button data-operation>-</button>
+        <button data-number>.</button>
+        <button data-number>0</button>
+        <button data-equals class="span-two">=</button>
     </div>
     <!--Section 2: Body(1) (End)-->
     
