--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -8,7 +8,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <!--Section 1: Header (Start)
+    
+    <!--Section 1: Header (Start)-->
     <header>
         <div class="headercontainer">
             <div class="item1">Drop Down</div>
@@ -16,7 +17,8 @@
             <div class="item3">Search Bar</div>     
         </div>
     </header>
-    Section 1: Header (End)-->
+    <!--Section 1: Header (End)-->
+
     <!--Section 2: Body(1) (Start)-->
     <div class="calculator-grid">
         <div class="output">
