--- a/testingFolder/testing.html
+++ b/testingFolder/testing.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="testing.css">
+    <script src="testing.js" defer></script>
 </head>
 <body>
     
@@ -22,6 +22,7 @@
     <!--Section 2: Body(1) (Start)-->
     <div class="calculator-grid">
         <div class="output">
+            <input type="text" id="userInput" placeholder="Type here">
             <div data-previous-operand class="previous-operand"></div>
             <div data-current-operand class="current-operand"></div>
         </div>
