--- a/testingFolder/testing.html
+++ b/testingFolder/testing.html
@@ -22,9 +22,8 @@
     <!--Section 2: Body(1) (Start)-->
     <div class="calculator-grid">
         <div class="output">
-            <input type="text" id="userInput" placeholder="Type here">
             <div data-previous-operand class="previous-operand"></div>
-            <div data-current-operand class="current-operand"></div>
+            <div data-current-operand class="current-operand" id="userInput"></div>
         </div>
         <button data-all-clear class="span-two">AC</button>
         <button data-delete>DEL</button>
